[package]
name = "remda"
version = "0.1.0"
authors = ["7sDream <i@7sdre.am>"]
edition = "2018"
description = "Yet another simple and pure software ray tracing renderer"
homepage = "https://github.com/7sDream/remda"
repository = "https://github.com/7sDream/remda"
license-file = "COPYING"
publish = false

[lib]
name = "remda"
path = "src/lib.rs"

[dependencies]
env_logger = "0.7"
log = "0.4"
rand = "0.7"
rayon = "1.3"
num_cpus = "1.13"

[dependencies.image]
version = "0.23"
default-features = false
features = ["jpeg", "jpeg_rayon", "png", "bmp"]

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
panic = "abort"
